--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,9 @@ spring.jpa.generate-ddl=true
 #create - создает схему с удалением того что было
 #update - обновляет схему бд когда мы добавляем новые фичи
 #validate - когда пишем скрипты для бд, то происходит проверка что бд совпадает по мапингу с тем что написано в коде
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
+
+#для просмотра информации о транзакции
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
