--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/lesson4
-spring.datasource.username=postgres
-spring.datasource.password=25672594
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/lesson4}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:25672594}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.generate-ddl=true
 #create-drop - при запуске создает бд а при закрытии удаляет
 #create - создает схему с удалением того что было
 #update - обновляет схему бд когда мы добавляем новые фичи
 #validate - когда пишем скрипты для бд, то происходит проверка что бд совпадает по мапингу с тем что написано в коде
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 
 #для просмотра информации о транзакции
 spring.jpa.properties.hibernate.show_sql=true
